fix(design): wrong colors

--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html {
 }
 
 body {
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
+  background-color: #050505;
+  color: #eeeeee;
   padding: 0;
   margin: 0;
 }
@@ -38,9 +38,9 @@ header,
   gap: 10px;
   align-items: center;
   justify-content: center;
-  color: rgb(0, 0, 0);
+  color: #050505;
   text-decoration: none;
-  background-color: rgb(255, 255, 255);
+  background-color: #eeeeee;
   font-size: 22px;
   font-weight: 600;
   border-radius: 50px;
@@ -78,7 +78,7 @@ header {
 .title {
   padding: 15px;
   width: 90%;
-  background-color: #0b0b0b;
+  background-color: #050505;
   z-index: 1;
 }
 
@@ -164,8 +164,8 @@ header {
   left: 100px; */
   flex-direction: column;
   overflow: hidden;
-  color: #0b0b0b;
-  box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.5);
+  color: #050505;
+  box-shadow: 5px 5px 5px #050505;
   background-color: #eeeeee;
   width: 220px;
   height: 180px;
@@ -237,7 +237,7 @@ input[type="checkbox"]:checked ~ .card p {
   position: fixed;
   bottom: 10px;
   z-index: 0;
-  background-color: #0b0b0b;
+  background-color: #050505;
   width: 280px;
   padding: 15px 10px;
   border-radius: 20px;
@@ -406,7 +406,7 @@ nav img {
   align-items: center;
   gap: 65px;
   padding: 40px 0;
-  color: #0b0b0b;
+  color: #050505;
 }
 
 #reviews > div {
@@ -440,7 +440,7 @@ p {
 
 footer {
   background-color: #eeeeee;
-  color: #0b0b0b;
+  color: #050505;
   padding: 20px 10px;
 }
 
@@ -451,7 +451,7 @@ footer form div {
 }
 
 footer .btn {
-  background-color: #0b0b0b;
+  background-color: #050505;
   color: #eeeeee;
 }
 
@@ -465,7 +465,7 @@ footer label {
 }
 
 footer input[type="email"] {
-  border: 3px solid #0b0b0b;
+  border: 3px solid #050505;
   border-radius: 15px;
   width: 170px;
   height: 42px;
@@ -487,7 +487,7 @@ footer input[type="submit"]:hover {
 }
 
 .moins-10 {
-  background-color: #0b0b0b;
+  background-color: #050505;
   color: #eeeeee;
   font-size: 14px;
   font-weight: bold;
@@ -520,19 +520,19 @@ footer input[type="submit"]:hover {
 
 footer a {
   text-decoration: none;
-  color: #0b0b0b;
+  color: #050505;
   font-weight: 700;
 }
 
 footer a:hover {
   text-decoration: underline;
-  color: #0b0b0b;
+  color: #050505;
   font-weight: 900;
 }
 
 footer a:visited {
   text-decoration: none;
-  color: #0b0b0b;
+  color: #050505;
   font-weight: 700;
 }
 
@@ -842,7 +842,7 @@ footer a:visited {
   }
 
   .header-btn .btn {
-    background-color: #0b0b0b;
+    background-color: #050505;
     color: #eeeeee;
   }
 
